fix: Overflow showing up due to fullpage.js

--- a/src/main.scss
+++ b/src/main.scss
@@ -59,7 +59,7 @@ h6 {
   margin-right: auto;
 }
 
-.three-quaters-height {
+.three-quarters-height {
   height: 75%;
 }
 
